# Self-Corrective-Agentic-RAG

./: .env  README.md  pyproject.toml  requirements.txt  structure.dot
core/: config.py  orchastrator.py  vector.py
data/vector/: doc.py  vector.py
streamlit/: UI.py
